2002-12-05  IKEBE Tomohiro  <ikebe@edge.co.jp>

	* 0.01 original version
	* 0.02 fixed Happy Monday calculation.