@@ -7,3 +7,7 @@ t/00_compile.t
 t/01_fixed.t
 t/02_float.t
 t/03_equinox.t
+t/04_function.t
+t/05_change.t
+t/06_between.t
+t/07_special.t
