@@ -2,18 +2,26 @@ NAME
     Date::Japanese::Holiday - Calculate Japanese Holiday.
 
 SYNOPSIS
+      # OO interface
       use Date::Japanese::Holiday;
 
       if(Date::Japanese::Holiday->new(2002, 2, 11)->is_holiday) {
            # ...
       }
 
-DESCRIPTION
-    Date::Japanese::Holiday calculates Japanese Holiday. this module
-    supports from 1948-04-20 to now.
+      # functional interface
+      use Date::Japanese::Holiday qw(is_japanese_holiday);
 
-    is_holiday method return true value when the day is Holiday. the Holiday
-    does not Include Sunday, Change Holiday.
+      # return Date::Japanese::Holiday object or undef.
+      if(is_japanese_holiday(2002, 11, 23)) {
+          # ...
+      }
+
+DESCRIPTION
+    Date::Japanese::Holiday is-a Date::Simple, and calculates Japanese
+    Holiday. this module supports from 1948-04-20 to now.
+
+    is_holiday method return true value when the day is Holiday.
 
 AUTHOR
     IKEBE Tomohiro <ikebe@edge.co.jp>
@@ -22,5 +30,5 @@ AUTHOR
     under the same terms as Perl itself.
 
 SEE ALSO
-    the Date::Calc manpage the Time::JulianDay manpage
+    Date::Simple Date::Calc Time::JulianDay Date::Japanese::Era
 
